# telegram-ytdl-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  setup.py
scripts/: bootstrap_instagram_cookies.py
src/: __init__.py  __main__.py  bot.py  browser_downloader.py  config.py  downloader.py  gallery_downloader.py  instagram_downloader.py  spotify_downloader.py  youtube_api_downloader.py
tests/: conftest.py  test_bot.py  test_downloader.py  test_gallery_downloader.py  test_instagram_downloader.py  test_spotify_downloader.py
